--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
     <div class="container">
         <h1>Is Your Birthday Lucky ?</h1>
+
+        <label for="dob">Date Of Birth</label>
+        <input type="date" id="dob" />
+
+        <label for="lucky-number">Lucky Number</label>
+        <input type="number" id="lucky-number">
+
+        <button class="btn-check">Check</button>
+
+        <div class="result"></div>
     </div>
 </body>
 <script src="index.js"></script>
