--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <div class="container">
         <h1>Is Your Birthday Lucky ?</h1>
 
-        <label for="dob">Date Of Birth</label>
+        <label for="dob">Date Of Birth : </label>
         <input type="date" id="dob" />
 
-        <label for="lucky-number">Lucky Number</label>
-        <input type="number" id="lucky-number">
+        <label for="lucky-number">Lucky Number :</label>
+        <input type="number" id="lucky-number" placeholder="Enter Your Lucky Number">
 
         <button class="btn-check">Check</button>
 
-        <div class="result"></div>
+        <div class="result">
+        </div>
+
+        <div class="note">
+            <p><strong>Note: User's Data is not being stored</strong></p>
+        </div>
     </div>
 </body>
 <script src="index.js"></script>
